<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.SignUpFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/vertical">

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/vertical"
                android:layout_marginTop="@dimen/small"
                android:contentDescription="@string/title_sign_up"
                android:gravity="center"
                android:textSize="@dimen/large_text"
                android:textAllCaps="true"
                android:scaleX="0"
                android:scaleY="0"
                android:text="@string/title_sign_up">

            </TextView>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large"
                android:scaleX="0"
                android:scaleY="0">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msg_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large"
                android:scaleX="0"
                android:scaleY="0">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msg_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/large"
                android:contentDescription="@string/action_sign_up"
                android:scaleX="0"
                android:scaleY="0"
                android:textColor="@color/textColorSecondary"
                android:background="@color/colorAccent"
                android:text="@string/action_sign_up" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                android:scaleX="0"
                android:scaleY="0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large"
                    android:contentDescription="@string/msg_already_a_member"
                    android:gravity="center"
                    android:text="@string/msg_already_a_member" />

                <TextView
                    android:id="@+id/text_sign_in"
                    style="@style/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_sign_in"
                    android:gravity="center"
                    android:text="@string/action_sign_in" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
