<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color_dark"
    tools:context="com.example.weverson.speedchat.presentation.signin.SignInFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/large"
                android:layout_marginTop="@dimen/large"
                android:scaleX="0"
                android:scaleY="0"
                android:src="@drawable/ic_lightning_large" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large"
                android:scaleX="0"
                android:scaleY="0"
                android:textColorHint="@color/text_secondary">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/msg_email"
                    android:hint="@string/msg_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large"
                android:scaleX="0"
                android:scaleY="0"
                android:textColorHint="@color/text_secondary">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/msg_password"
                    android:hint="@string/msg_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_sign_in"
                style="@style/button_colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/large"
                android:contentDescription="@string/action_sign_in"
                android:scaleX="0"
                android:scaleY="0"
                android:text="@string/action_sign_in" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                android:scaleX="0"
                android:scaleY="0">

                <TextView
                    style="@style/text_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large"
                    android:contentDescription="@string/msg_already_a_member"
                    android:gravity="center"
                    android:text="@string/msg_can_not_have_an_account" />

                <TextView
                    android:id="@+id/text_sign_in"
                    style="@style/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/action_sign_in"
                    android:gravity="center"
                    android:text="@string/msg_sign_up" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
